--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Skype</title>
     <style type="text/css">
         @import url("styles/style.css");
     </style>
+    <link rel="icon" href="img/favicon.ico" type="image/md.microsoft.icon"/>
 </head>
 <body id="body">
     <header>
