--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="friend-list" id="friend-list"></div>
     </div>
     <div class="chat-field" id="chat-field"></div>
-    <div class="text-field" id="text-field"></div>
+    <div class="text-field" id="text-field">
+    </div>
     <div class="message-field">
         <div class="text-area" contentEditable="true" id="message"></div>
         <div class="button-send" id="button-send"></div>
