--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style type="text/css">
         @import url("styles/style.css");
     </style>
+    
     <link rel="icon" href="img/favicon.ico" type="image/md.microsoft.icon"/>
 </head>
 <body id="body">
@@ -33,6 +34,7 @@
         <label for="button-load-photo" class="button-load-photo"></label>
         <input type="file" style="opacity: 0; position: fixed; margin-left: 52%; bottom: 1%; height: 15%; width: 5%; cursor: pointer;" id="button-load-photo" />
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"/>
     <script src="script/localStorage.js"></script>
     <script src="script/loadFriendList.js"></script>
     <script src="script/loadChat.js"></script>
