--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="user-info">
             <img class="profile-image" id="user-icon"/>
             <div class="user-name">User</div>
-            <input value="" type="file" style="opacity: 0; position: fixed; float: left; height: 15%; margin-left: -30%; width: 20%; top:12%; cursor: pointer;" id="button-load-profile-photo"/>
-            <div class="apply-photo" id="apply-photo"></div>        
+            <input value="" type="file" style="opacity: 0; position: fixed; float: left; height: 15%; margin-left: -30%; width: 20%; top:12%; cursor: pointer;" id="button-load-profile-photo" onchange="loadProfilePhoto();"/>   
         </div>
         <div class="friend-list" id="friend-list"></div>
     </div>
@@ -32,9 +31,8 @@
         <div class="button-send" id="button-send"></div>
         <div class="button-emogi" id="button-emoji"></div>
         <label for="button-load-photo" class="button-load-photo"></label>
-        <input type="file" style="opacity: 0; position: fixed; margin-left: 52%; bottom: 1%; height: 15%; width: 5%; cursor: pointer;" id="button-load-photo" />
+        <input type="file" style="opacity: 0; position: fixed; margin-left: 52%; bottom: 1%; height: 15%; width: 5%; cursor: pointer;" id="button-load-photo" onchange="loadMiniPhoto();"/>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"/>
     <script src="script/localStorage.js"></script>
     <script src="script/loadFriendList.js"></script>
     <script src="script/loadChat.js"></script>
