--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <style type="text/css">
         @import url("styles/style.css");
     </style>
-    
     <link rel="icon" href="img/favicon.ico" type="image/md.microsoft.icon"/>
 </head>
 <body id="body">
@@ -19,7 +18,7 @@
         <div class="user-info">
             <img class="profile-image" id="user-icon"/>
             <div class="user-name">User</div>
-            <input value="" type="file" style="opacity: 0; position: fixed; float: left; height: 15%; margin-left: -30%; width: 20%; top:12%; cursor: pointer;" id="button-load-profile-photo" onchange="loadProfilePhoto();"/>   
+            <input value="" class="hide-input-profile-photo" type="file" id="button-load-profile-photo" onchange="loadProfilePhoto();"/>   
         </div>
         <div class="friend-list" id="friend-list"></div>
     </div>
@@ -28,10 +27,10 @@
     </div>
     <div class="message-field">
         <div class="text-area" contentEditable="true" id="message"></div>
-        <div class="button-send" id="button-send"></div>
+        <div class="button-send" id="button-send" onclick="sendMessage();"></div>
         <div class="button-emogi" id="button-emoji"></div>
         <label for="button-load-photo" class="button-load-photo"></label>
-        <input type="file" style="opacity: 0; position: fixed; margin-left: 52%; bottom: 1%; height: 15%; width: 5%; cursor: pointer;" id="button-load-photo" onchange="loadMiniPhoto();"/>
+        <input type="file" class="hide-input-load-file" id="button-load-photo" onchange="loadMiniPhoto();"/>
     </div>
     <script src="script/localStorage.js"></script>
     <script src="script/loadFriendList.js"></script>
