--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="message-field">
         <div class="text-area" contentEditable="true" id="message"></div>
         <div class="button-send" id="button-send" onclick="sendMessage();"></div>
-        <div class="button-emogi" id="button-emoji"></div>
+        <div class="button-emogi" id="button-emoji" onclick="showEmojiList();"></div>
         <label for="button-load-photo" class="button-load-photo"></label>
         <input type="file" class="hide-input-load-file" id="button-load-photo" onchange="loadMiniPhoto();"/>
     </div>
